# kmu-sw-navigator

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: assignments.py  auth.py  chat.py  dependencies.py  integrations.py  llm_logs.py  memories.py  profile.py  recommendations.py  runtime.py
backend/app/core/: config.py  supabase_errors.py
backend/app/db/: __init__.py  supabase_client.py
backend/app/schemas/: __init__.py  assignment.py  calendar.py  chat.py  google_oauth.py  integration.py  llm_usage.py  memory.py  profile.py  recommendation.py  runtime_status.py
backend/app/scripts/: __init__.py  auth_api_smoke.py  build_wiki.py  calendar_export_smoke.py  check_env.py  create_smoke_user.py  gemini_answer_smoke.py  (+12 more)
backend/tests/: conftest.py  test_auth_api_smoke_script.py  test_calendar_export_smoke_script.py  test_check_env_script.py  test_cors.py  test_create_smoke_user_script.py  test_gemini_answer_smoke_script.py  test_gemini_grounding_smoke_script.py  test_gemini_smoke_script.py  test_ingest_documents_script.py  test_live_smoke_plan_script.py  test_live_smoke_run_script.py  test_llm_usage_smoke_script.py  test_prepare_raw_document_script.py  test_rag_quality_eval_script.py  test_smoke_env.py  test_supabase_errors.py  test_supabase_login_smoke_script.py  test_supabase_schema_check_script.py  test_supabase_schema_sql_contract.py  test_supabase_seed_sql_contract.py  test_supabase_smoke_script.py
(+190 files in other folders)
