[project]
name = "kmu-sw-navigator-backend"
version = "0.1.0"
description = "kmu-sw-navigator FastAPI backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.124.0",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "PyJWT>=2.10.0",
    "python-dotenv>=1.2.0",
    "google-genai>=1.51.0",
    "supabase>=2.26.0",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
